--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -35,7 +35,10 @@ div.actions {
 
 #notice {
   color: green; }
-
+  
+#alert {
+  color: red; }
+  
 .field_with_errors {
   padding: 2px;
   background-color: red;
